--- a/projectsite/templates/includes/pagination.html
+++ b/projectsite/templates/includes/pagination.html
@@ -1,6 +1,5 @@
 {%if is_paginated %}
 <div class="card-foorter px-0 border-0 d-flex flex-column flex-lg-row align-items-center justify-content-between mt-3">
-    content-between mt-3">
     <nav aria-label="Topics pagination" class="mb-4">
         <ul class="pagination">
             {% if page_obj.number > 1 %}
@@ -23,11 +22,11 @@
             <li class="page-item active ">
                 <span class="page-link">
                     {{ page_num}}
-
-                    <span class="sr-only"> (current )</span>
+                    <span class="sr-only"> (current)</span>
                 </span>
             </li>
-            {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %} <li class="page-item">
+            {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %} 
+            <li class="page-item">
                 <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
                 </li>
                 {% endif %} {% endfor %} {% if page_obj.has_next %}
@@ -38,7 +37,7 @@
                 <li class="page-item disabled">
                     <span class="page-link">Next</span>
                 </li>
-                {% endif %} {% if page_obj.has_number != paginator.num_page %}
+                {% endif %} {% if page_obj.number != paginator.num_page %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{ paginator.num_pages }}">Last</a>
                 </li>
@@ -50,6 +49,6 @@
         </ul>
     </nav>
     <div class="fw-normal small mt-4 mt-lg-0">Showing <b> {{object_list.count}}</b> out of
-        <b>{{paginator.count}}</b>entries</div>
+<b>{{paginator.count}}</b>entries</div>
 </div>
 {% endif %}
